--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "node-pre-gyp": "^0.17.0",
     "sqlite3": "^5.1.6",
