--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.8.3",
     "node-pre-gyp": "^0.17.0",
     "sqlite3": "^5.1.6",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
