--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "core-js": "^3.8.3",
     "node-pre-gyp": "^0.17.0",
