--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "node-pre-gyp": "^0.17.0",
     "sqlite3": "^5.1.6",
