--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "node-pre-gyp": "^0.17.0",
     "sqlite3": "^5.1.6",
     "vue": "^3.2.13",
