--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-pre-gyp": "^0.17.0",
     "sqlite3": "^5.1.6",
     "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
