--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jsonwebtoken": "^9.0.1",
