--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-pre-gyp": "^0.17.0",
+    "socket.io-client": "^4.7.2",
     "sqlite3": "^5.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
