--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sqlite3": "^5.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
+    "vuetify": "^3.3.14",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
