--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.3.0",
+    "@capacitor/cli": "^5.3.0",
+    "@capacitor/core": "^5.3.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@google-cloud/storage": "^6.12.0",
     "axios": "^1.3.4",
