--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
             options:
               nodeversion: "16"
               spa: false
+              buildenv:
+                - name: VUE_APP_apiKey
+                  secret: apiKey
             context:
               git:
                 url: git@github.com:${{ github.repository }}.git
