--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@capacitor/core": "^5.3.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@google-cloud/storage": "^6.12.0",
-    "axios": "^1.3.4",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
+    "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "firebase": "^10.1.0",
     "js-yaml": "^4.1.0",
