--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "^5.3.0",
     "@capacitor/cli": "^5.3.0",
     "@capacitor/core": "^5.3.0",
+    "@capacitor/ios": "^5.4.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@google-cloud/storage": "^6.12.0",
     "axios": "^1.5.0",
