--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@capacitor/core": "^5.3.0",
     "@capacitor/ios": "^5.4.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@google-cloud/storage": "^6.12.0",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
@@ -23,6 +26,7 @@
     "cheerio": "^1.0.0-rc.12",
     "core-js": "^3.8.3",
     "firebase": "^10.4.0",
+    "frontend": "file:",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
