--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "main": "./electron/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron": "electron ."
   },
   "dependencies": {
     "@capacitor/android": "^5.3.0",
@@ -46,6 +48,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^34.0.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass-loader": "^10.2.0"
